# RL_agent_for_Genetic_Algorithms

./: .gitignore  README.md  pyproject.toml  requirements.txt
experiments/exp_01_vanilla/A-n32-k5/run_0/: best_solution.yaml
experiments/exp_01_vanilla/A-n32-k5/run_1/: best_solution.yaml
experiments/exp_01_vanilla/A-n32-k5/run_3/: best_solution.yaml
experiments/exp_01_vanilla/A-n33-k5/run_0/: best_solution.yaml
experiments/exp_01_vanilla/A-n33-k5/run_1/: best_solution.yaml
experiments/exp_01_vanilla/A-n33-k5/run_3/: best_solution.yaml
experiments/exp_01_vanilla/A-n33-k5/run_4/: best_solution.yaml
experiments/exp_01_vanilla/A-n33-k6/run_2/: best_solution.yaml
experiments/exp_01_vanilla/A-n33-k6/run_4/: best_solution.yaml
experiments/exp_01_vanilla/A-n34-k5/run_0/: best_solution.yaml
experiments/exp_01_vanilla/A-n34-k5/run_1/: best_solution.yaml
experiments/exp_01_vanilla/A-n34-k5/run_3/: best_solution.yaml
experiments/exp_01_vanilla/A-n34-k5/run_4/: best_solution.yaml
report/: analysis_of_results.ipynb
scripts/: cache_instances.py  run_exp01.py  run_exp02.py  save.py  train_rl.py
src/: roots.py
src/core/: instance_loader.py  solution_representation.py
src/ea/: crossover.py  evolutionary_algorithm.py  mutation.py  population.py  selection.py
src/frameworks/rl_param_optimizer/: agent.py  config_rl.yaml  env.py
src/frameworks/vanilla_ea/: config.yaml
src/utils/: find_best.py  logging.py  metrics.py  seeding.py  visualization.py
tests/: test_instance_loader.ipynb  test_metrics_and_solrep.ipynb
(+126 files in other folders)
